--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/boomel/webpack-app/issues"
   },
-  "homepage": "https://github.com/boomel/webpack-app#readme"
+  "homepage": "https://github.com/boomel/webpack-app#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3"
+  }
 }
