--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.1.5",
     "img-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "svg-url-loader": "^2.3.2",
